--- a/test_center/templates/base.html
+++ b/test_center/templates/base.html
@@ -136,8 +136,8 @@
                 <ul>
                     <li><a href="{% url 'home' %}">Главная</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="#">Профиль</a></li>
-                        <li><a href="#">Выйти</a></li>
+                        <li><a href="{% url 'profile' %}">Профиль</a></li>
+                        <li><a href="{% url 'login' %}">Выйти</a></li>
                     {% else %}
                         <li><a href="{% url 'login' %}">Войти</a></li>
                         <li><a href="{% url 'register' %}">Регистрация</a></li>
