--- a/test_center/templates/home.html
+++ b/test_center/templates/home.html
@@ -31,7 +31,7 @@
                 Добро пожаловать, {{ user.username }}!
             </p>
         {% else %}
-            <a href="#" 
+            <a href="login" 
                style="display:inline-block; padding:18px 50px; background:#3498db; color:white; 
                       text-decoration:none; border-radius:50px; font-size:1.4rem; font-weight:600;
                       margin:0 10px; box-shadow:0 10px 30px rgba(52,152,219,0.4);">
